# paddle-ocr-v6-server

./: .gitignore  LICENSE  README.md
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-07-05-ocr-api-implementation.md
docs/superpowers/specs/: 2026-07-05-ocr-api-design.md
ocr-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.gpu  README.md  config.toml  download-models.sh
ocr-api/src/: main.rs
